test/tests/operators/from_http/error_encode_invalid.txt
error: unsupported encoding: `xml`
 --> tests/operators/from_http/error_encode_invalid.tql:5:56
  |
5 | from_http "http://127.0.0.1:0/", body={a: "b"}, encode="xml" {
  |                                                        ^^^^^ 
  |
  = hint: `encode` must be `"json"` or `"form"`
